@@ -1,3 +1,6 @@
+Changelog 0.3.33 [20230224]:
+- Added GogoHD Dub Sources
+
 Changelog 0.3.32 [20230224]:
 - Added GogoHD Sources
 
